Formated map panel, seemore panel and started formating final results panel

--- a/zad1/template.html
+++ b/zad1/template.html
@@ -14,7 +14,7 @@
                 <img src="header.png" alt=""/>
             </header>
             <nav>
-                <ul id="navlist">
+                <ul id="navlist" class="font11">
                     <li><a href="###">Strona Główna</a></li>
                     <li><a href="###">Akty prawne</a></li>
                     <li><a href="###">Dokumenty</a></li>
@@ -30,8 +30,84 @@
             </nav>
             <main>
                 <div id="panel_w_map">
+                    <p class="font11">
+                        Porównanie wyników głosowania na kandydatów
+                    </p>
+                    <div>
+                        <div id = "mapbox">
+                            <img src = "map.png" />
+                        </div>
+                        <div id = "statbox">
+                            <p class="font17" id="polska">
+                                <a href="###" >Polska</a>
+                            </p>
+                            <table class="font11" cellpadding="0" cellspacing = "0" border="0"> 
+                                <tr>
+                                    <td colspan="2"  class="bold dark">
+                                    Statystyka, stan na 30.06.2005
+                                    </td>
+                                </tr>
+                                <tr><td>
+                                        Liczba mieszkańców:
+                                    </td><td class="bold">
+                                        38028391
+                                    </td></tr>
+                                <tr><td>
+                                        Powierzchnia:
+                                    </td><td class="bold">
+                                        312685 km2
+                                    </td></tr>
+                                <tr><td>
+                                         Zaludnienie:
+                                    </td><td class="bold">
+                                        121 os/km2
+                                    </td></tr>
+                                <tr>
+                                    <td colspan="2"  class="bold dark">
+                                    Zbiorcze wyniki głosowania
+                                    </td>
+                                </tr>
+                                <tr><td>
+                                        Liczba uprawnionych:
+                                    </td><td class="bold">
+                                        ###
+                                    </td></tr>
+                                <tr><td>
+                                        Liczba wydanych kart:
+                                    </td><td class="bold">
+                                        ###
+                                    </td></tr>
+                                <tr><td>
+                                         Liczba głosów oddanych
+                                    </td><td class="bold">
+                                        ###
+                                    </td></tr>
+                                <tr><td>
+                                         Liczba głosów ważnych
+                                    </td><td class="bold">
+                                        ###
+                                    </td></tr>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-                <div id="panel_seemore">
+                <div id="panel_seemore" class="font11">
+                    <p class="bold">
+                        Zobacz także:
+                    </p>
+                    <ul>
+                        <li>Frekwencja</li>
+                        <li>Wyniki głosowania zagranicą</li>
+                        <li>Porównanie wyników głosowania na kandydatów w zależności od siedziby komisji obwodowej</li>
+                    </ul>
+
+                    <p class="bold">
+                        Szczegółowe wyniki głosowania na kandydatów:
+                    </p>
+                    <ul>
+                        <li>KACZYŃSKI Lech Aleksander</li>
+                        <li>TUSK Donald Franciszek</li>
+                    </ul>
                 </div>
                 <div id="panel_final">
                 </div>
