Upper half of the webpage almost done

--- a/zad1/template.html
+++ b/zad1/template.html
@@ -29,6 +29,11 @@
                 </ul>
             </nav>
             <main>
+                <div id="strip" >
+                    <div id="strip-text">
+                        Wyniki głosowania
+                    </div>
+                </div>
                 <div id="panel_w_map">
                     <p class="font11">
                         Porównanie wyników głosowania na kandydatów
@@ -96,20 +101,46 @@
                         Zobacz także:
                     </p>
                     <ul>
-                        <li>Frekwencja</li>
-                        <li>Wyniki głosowania zagranicą</li>
-                        <li>Porównanie wyników głosowania na kandydatów w zależności od siedziby komisji obwodowej</li>
+                        <li><a href="###">Frekwencja</a></li>
+                        <li><a href="###">Wyniki głosowania zagranicą</a></li>
+                        <li><a href="###">Porównanie wyników głosowania na kandydatów w zależności od siedziby komisji obwodowej</a></li>
                     </ul>
 
                     <p class="bold">
                         Szczegółowe wyniki głosowania na kandydatów:
                     </p>
                     <ul>
-                        <li>KACZYŃSKI Lech Aleksander</li>
-                        <li>TUSK Donald Franciszek</li>
+                        <li><a href="###">KACZYŃSKI Lech Aleksander</a></li>
+                        <li><a href="###">TUSK Donald Franciszek</a></li>
                     </ul>
                 </div>
                 <div id="panel_final">
+                    <p class="bold">
+                    <a href="###" >KACZYŃSKI Lech Aleksander</a>
+                    </p>
+                    <div class="score-holder">
+                        <div class="ruler">
+                        </div>
+                        <div class="percent">
+                            ##.##%
+                        </div>
+                        <div class="count">
+                            #######
+                        </div>
+                    </div>
+                    <p class="bold">
+                    <a href="###" >TUSK Donald Franciszek</a>
+                    </p>
+                    <div class="score-holder">
+                        <div class="ruler">
+                        </div>
+                        <div class="percent">
+                            ##.##%
+                        </div>
+                        <div class="count">
+                            #######
+                        </div>
+                    </div>
                 </div>
                 <div class="panel_table">
                 </div>
