started django project for this website

--- a/zad1/template.html
+++ b/zad1/template.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div id="panel_w_map">
-                    <p class="font11">
+                    <p class="font11 miniheader">
                         Porównanie wyników głosowania na kandydatów
                     </p>
                     <div>
@@ -95,6 +95,38 @@
                             </table>
                         </div>
                     </div>
+                    <div id="rangesbox">
+                        <table>
+                            <tr>
+                                <td>
+                                    brak
+                                </td>
+                                <td>
+                                    50.00%
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="background-color: white;">
+                                </td>
+                                <td style="background-color: rgb(190, 255,167);">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="background-color: white;">
+                                </td>
+                                <td style="background-color: rgb(190, 255,167);">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    danych
+                                </td>
+                                <td>
+                                    50.00%
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
                 <div id="panel_seemore" class="font11">
                     <p class="bold">
@@ -120,6 +152,7 @@
                     </p>
                     <div class="score-holder">
                         <div class="ruler">
+                            <div class="candidate1" style="width: 30%;" > </div>
                         </div>
                         <div class="percent">
                             ##.##%
@@ -133,6 +166,7 @@
                     </p>
                     <div class="score-holder">
                         <div class="ruler">
+                            <div class="candidate2" style="width: 70%" > </div>
                         </div>
                         <div class="percent">
                             ##.##%
@@ -143,8 +177,88 @@
                     </div>
                 </div>
                 <div class="panel_table">
+                    <p class="font11 miniheader">
+                        Porównanie wyników głosowania na kandydatów
+                    </p>
+                    <table class="font11 statmaintable">
+                        <tr>
+                            <th width=47 rowspan="3">
+                                Nr
+                            </th>
+                            <th rowspan="3">
+                                Nazwa
+                            </th>
+                            <th width=90 rowspan="3">
+                                Liczba głosów ważnych
+                            </th>
+                            <th colspan="2">
+                                KACZYŃSKI Lech Aleksander
+                            </th>
+                            <th width=320 rowspan="3">
+                                Liczba głosów:<br>
+                                na kandydata / ważnych<br>
+                                [%]
+                            </th>
+                            <th colspan="2">
+                                TUSK Donald Franciszek
+                            </th>
+                        </tr>
+                        <tr>
+                            <th colspan="2">
+                                głosów na kandydata
+                            </th>
+                            <th colspan="2">
+                                głosów na kandydata
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                liczba
+                            </th>
+                            <th>
+                                %
+                            </th>
+                            <th>
+                                %
+                            </th>
+                            <th>
+                                liczba
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                010000
+                            </td>
+                            <td>
+                                mazowieckie, woj
+                            </td>
+                            <td>
+                                #######
+                            </td>
+                            <td>
+                                ######
+                            </td>
+                            <td>
+                                ##.##
+                            </td>
+                            <td class="tableruler">
+                                <div>
+                                    <div style="width: 30%;">
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                ##.##
+                            </td>
+                            <td>
+                                ######
+                            </td>
+                    </table>
                 </div>
                 <div class="panel_table">
+                    <p class="font11 miniheader">
+                        Porównanie wyników głosowania na kandydatów w zależności od siedziby komisji obwodowej
+                    </p>
                 </div>
             </main>
             <footer>
