Reniced error reporting, reniced index page

--- a/zad1/pkw2005/election/static/index.html
+++ b/zad1/pkw2005/election/static/index.html
@@ -46,7 +46,7 @@
             <main>
                 <div id="strip" >
                     <div id="strip-text">
-                        Wyniki głosowania(static!)
+                        Wyniki głosowania
                     </div>
                     <div id="uname" style="float: right;">
                         <a href="/login/">Zaloguj</a>
@@ -468,6 +468,8 @@
            </table>
         </div>
         <div id="eddial" name="bluh2" class="hidden">
+            <div id="gederr">
+            </div>
             <form id="geditid">
                 <table id="edittab">
                     <tr>
