Fixed load-pull-load sync and login selenium tests

--- a/zad1/pkw2005/election/static/index.html
+++ b/zad1/pkw2005/election/static/index.html
@@ -16,9 +16,7 @@
         <script src="static/graboffline.js"> </script>
         <script>
             $(function () {
-                set_logged_state();
-                load_from_ls();
-                graboffline();
+                initialize();
             });
         </script>
     </head>
